Revert "Merge pull request #22428 from vespa-engine/revert-22426-bratseth/schema-info-5"
This reverts commit d6cb1273bcebdea6b8404b242cecb81802d0fb60, reversing
changes made to de8e6f7128dc6489800eae8ce8cdcc6e3414475e.